# nemo-asr

./: .gitignore  README.md  merge_tokenizers.py  prepare_data.py  prepare_fleurs_test.py  pyproject.toml  requirements-frozen.txt  run_eval.sh  run_finetune.sh  run_infer.sh  setup.sh
docs/: inference_and_deploy.md  new_language_adaptation.md  results.md
